# Neo-PSP-CRF

./: README.md  eval.py
include/: cnpy.h  densecrf.h
src/SLICO/: CMakeLists.txt  tags
src/SLICO/include/: jconfig.h  jerror.h  jmorecfg.h  jpeglib.h
src/SLICO/src/: path_split.cpp
src/cnpy-master/: CMakeLists.txt  LICENSE  README  cnpy.cpp  cnpy.h  example1.cpp  mat2npz  npy2mat
src/densecrf_lib/: CMakeLists.txt  README.txt  tags
src/densecrf_lib/examples/: dense_inference.cpp  util.cpp  util.h
src/densecrf_lib/include/: densecrf.h
src/densecrf_lib/src/: bipartitedensecrf.cpp  densecrf.cpp  fastmath.h  filter.cpp  permutohedral.cpp  permutohedral.h  sse_defs.h  util.cpp  util.h
